Closed Bug 599101 Opened 15 years ago Closed 15 years ago

Fix EGL crash: mEGLLibrary was not loaded on non-Windows, depending on uninitialized value

Categories

(Core :: Graphics, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
fennec 2.0b1+ ---

People

(Reporter: bjacob, Assigned: bjacob)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix EGL crasher (obsolete) — Splinter Review
Look at this code: #ifdef XP_WIN // ............. angleFile->Append(NS_LITERAL_STRING("libEGL.dll")); angleFile->Load(&mEGLLibrary); } while (false); #endif if (!mEGLLibrary) { mEGLLibrary = PR_LoadLibrary(EGL_LIB); if (!mEGLLibrary) { NS_WARNING("Couldn't load EGL LIB."); return PR_FALSE; } } The problem there was that mEGLLibrary was uninitialized, so when it was accidentally non-null, we failed to load EGL, giving Brad a SIGILL.
Attachment #478041 - Flags: review?(vladimir)
Attached patch fix EGL crasherSplinter Review
oops, typo
Attachment #478041 - Attachment is obsolete: true
Attachment #478042 - Flags: review?(vladimir)
Attachment #478041 - Flags: review?(vladimir)
Assignee: nobody → bjacob
Severity: normal → critical
OS: Linux → All
Hardware: x86_64 → All
tracking-fennec: --- → 2.0b2+
tracking-fennec: 2.0b2+ → 2.0b1+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: