Bug 599101 - Fix EGL crash: mEGLLibrary was not loaded on non-Windows, depending on uninitialized value - r=vlad, a=blocking-fennec-2.0b1